# insurance-voice-ai

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh
.devcontainer/: devcontainer.json  setup.sh
docs/: architecture.md  decisions.md  limitations.md
q1-voice-agent/agent/: agent.py  edge_tts_service.py  web_handler.py
q1-voice-agent/recordings/: WhatsApp Audio 2026-07-19 at 10.37.59 AM.aac  leads.jsonl
q1-voice-agent/web-client/: package-lock.json  package.json
q1-voice-agent/web-client/src/: App.jsx
q2-knowledge-base/: schema.md
q2-knowledge-base/data/samples/: manual_records.jsonl
q2-knowledge-base/ingestion/: config.py  crawl_web.py  models.py  parse_pdf.py  run.py  utils.py
q2-knowledge-base/processing/: chunker.py  cleaner.py  models.py  pii.py  run.py  terminology.py  terminology_aliases.json
q2-knowledge-base/retrieval/: api.py  load_qdrant.py  search.py
q3-localized/id-agent/: agent.py
q3-localized/in-agent/: agent.py
q3-localized/kb-entries/: id_kb.jsonl  ph_kb.jsonl
q3-localized/ph-agent/: agent.py
q3-localized/web-client/: index.html
q4-realtime/dashboard/: index.html
q4-realtime/streaming/: pipeline.py  server.py
storage/: raft_state.json
storage/collections/star_health_kb/0/: newest_clocks.json  replica_state.json
storage/collections/star_health_kb/0/segments/1a4c9635-b33f-4f65-86b9-8f0aeee1f1e5/: mutable_id_tracker.mappings  mutable_id_tracker.versions
storage/collections/star_health_kb/0/segments/37031672-f9a3-428f-8d7c-c5b62a217231/: mutable_id_tracker.mappings  (+1 more)
