[project]
name = "insurance-voice-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "firecrawl-py>=1.6.0",
    "flagembedding>=1.3.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "numpy>=1.26.0",
    "pdfplumber>=0.11.0",
    "pipecat-ai[groq,silero,websocket]>=1.5.0,<2.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.12.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "tqdm>=4.66.0",
    "trafilatura>=1.12.0",
    "uvicorn[standard]>=0.30.0",
]
